--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,11 @@
 :root[data-ui-font='yahei'] {
   --app-font-family: 'Microsoft YaHei', 'Noto Sans CJK SC', 'Segoe UI', sans-serif;
 }
-
+.hud-station__name-zh.hud-station-zh{
+      transform: rotate(-45deg, 3647.37, 432)
+      
+      transform: translateY(20px) !important;
+}
 :root[data-ui-font='heiti'] {
   --app-font-family: 'SimHei', 'Noto Sans CJK SC', 'Segoe UI', sans-serif;
 }
